--- a/LEAGUE OF LEGENDS/src/css/style.css
+++ b/LEAGUE OF LEGENDS/src/css/style.css
@@ -28,7 +28,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
 }
 .title-login h1{
     font-size: 25px;
@@ -68,7 +68,7 @@ form input:hover{
 }
 .midia-card{
     background-color: mediumpurple;
-    height: 35px;
+    height: 30px;
     width: 74px;
     margin-right: 10px;
     display: flex;
@@ -96,5 +96,34 @@ form input:hover{
     background-color: #000;
 }
 .midia-card img{
-    height: 25px;
+    height: 20px;
+}
+.keep-login{
+    display: flex;
+    padding-left:48px;
+    width: 100%;
+    margin-bottom: 100px;
+}
+input[type=checkbox]{
+    height: 15px;
+    width: 15px;
+    margin-right: 10px;
+    background-color: #DCDCDC;
+}
+.keep-login p{
+    font-weight: bold;
+    font-family: 'Roboto', sans-serif;
+}
+.button-start{
+    margin-top: 40px;
+    margin-bottom: 50px;
+}
+.button-start button{
+    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid #DCDCDC;
+    background-color: #FFF;
+}
+.button-start button img{
+    height: 40px;
 }
