--- a/LEAGUE OF LEGENDS/src/css/style.css
+++ b/LEAGUE OF LEGENDS/src/css/style.css
@@ -41,7 +41,7 @@ form{
     justify-content: center;
     align-items: center;
 }
-form input{
+form .input{
     height: 50px;
     width: 75%;
     margin-bottom: 10px;
@@ -53,7 +53,7 @@ form input{
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
 }
-form input:hover{
+form .input:hover{
     border: 2px solid #000;
     display: flex;
     flex-direction: column;
@@ -105,11 +105,16 @@ form input:hover{
     margin-bottom: 100px;
 }
 input[type=checkbox]{
+    /* all: unset; */
     height: 15px;
     width: 15px;
     margin-right: 10px;
-    background-color: #DCDCDC;
 }
+input:checked{
+    background-color: blue;
+    width: 15px;
+    height: 15px;
+  }
 .keep-login p{
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
@@ -149,7 +154,7 @@ input[type=checkbox]{
 
 .layout{
     width: 100%;
-    background-image: url(../assets/Udyr-02.jpg);
+    background-image: url(../assets/Udyr.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -194,8 +199,16 @@ input[type=checkbox]{
     height: 20px;
     /* position: absolute; */
 }
+.settings{
+    margin-top: 15px;
+    height: 50px;
+    margin-right: 35px;
+}
 .square-02{
     padding: 5px;
-    border-radius: 10px;
+    border-radius: 15px;
     background-color: #424242bb;
+}
+.settings img{
+    height: 45px;
 }
