--- a/LEAGUE OF LEGENDS/src/css/style.css
+++ b/LEAGUE OF LEGENDS/src/css/style.css
@@ -176,19 +176,23 @@ input:checked{
     justify-content: space-between;
     align-items: center;
 }
-.information{
+.information{  
+    margin: 15px;
+    display: flex;
+}
+.informationIcon{
     height: 35px;
     width: 35px;
     background-color: #af69ee;
-    margin: 15px;
     transform: rotate(45deg);
-   -ms-transform: rotate(45deg);
-   -webkit-transform: rotate(45deg);
-   position: relative;
-   border-radius: 2px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
+    -ms-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 2px;
+    margin-top: 25px;
+    margin-left:10px;
 }
 .exclamacao{
     transform: rotate(-45deg);
